c/examples/writing-a-c-compiler-tests/tests/chapter_9/invalid_types/multiple_function_definitions_2.c
/* Function 'foo' is defined twice */
int foo(void){
    return 3;
}

int main(void) {
    // after seeing this declaration, we should still remember that
    // foo was defined earlier
    int foo(void);
    return foo();
}

int foo(void){
    return 4;
}